loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:3: error: value avance is not a member of Unit
  gauche() ; avance() ; droite() avance()
                                 ^